syntax = "proto3";
package fifsky.blog.api.v1;

import "types/common.proto";
import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

option go_package = "gen/api/v1";

// WeixinService 提供微信相关的接口
service WeixinService {
  // Message 发送模板消息
  rpc Message(MessageRequest) returns (WeixinResponse) {
    option (google.api.http) = {
      post: "/blog/weixin/message"
      body: "*"
    };
  }
}

message MessageRequest {
  // 接收人OpenID
  string touser = 1 [
    (buf.validate.field).required = true,
    (google.api.field_behavior) = REQUIRED
  ];
  // 模板ID
  string template_id = 2 [
    (buf.validate.field).required = true,
    (google.api.field_behavior) = REQUIRED
  ];

  message Value {
    string value = 1;
  }

  // 模板数据
  map<string, Value> data = 3 [
    (buf.validate.field).map.min_pairs = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

message WeixinResponse {}
