syntax = "proto3";
package fifsky.blog.types;

import "buf/validate/validate.proto";

option go_package = "gen/types";

message IDResponse {
  int32 id = 1;
}

message Options {
  map<string, string> kv = 1 [(buf.validate.field).map.min_pairs = 1];
}

message UserSummary {
  int32 id = 1;
  string name = 2;
  string nick_name = 3;
}

message CateSummary {
  int32 id = 1;
  string name = 2;
  string domain = 3;
}

message ErrorResponse {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}
